# GAIT-Latest

./: .env  MANIFEST.in  complete_directory_structure.txt  config.yaml  docker-compose.prod.yml  main.py  procedure.txt  pyproject.toml  requirements.txt  setup.py
data/processed/: preparation_stats.json
deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  mongodb.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
deployment/nginx/: nginx.conf
scripts/: __init__.py  backup_system.sh  data_preparation.py  data_preparation_script.py  evaluate_models.py  generate_sample_data.py  health_check.sh  init-mongo.js  init_database.py  restore_system.sh  start_fl_server.py  train_models.py
src/: integration_pipeline.py
src/dashboard/: __init__.py  admin_module.py  analysis_module.py  main_dashboard.py  results_module.py  upload_module.py
src/data/: __init__.py  data_loader.py  data_validator.py  fl_client.py  synthetic_generator.py
src/database/: __init__.py  migrations.py  models.py  mongo_handler.py
src/explainability/: __init__.py  lime_explainer.py  shap_explainer.py  visualization.py
src/federated/: __init__.py  aggregation.py  fl_client.py  fl_server.py  privacy.py
src/models/: __init__.py  disease_classifier.py  federated_model.py  gait_detector.py  model_utils.py
src/preprocessing/: feature_extractor.py  normalizer.py  segmentation.py  signal_processor.py
src/tests/: test_federated_system.py
src/utils/: __init__.py  config.py  helpers.py  logger.py  metrics.py
static/css/: custom.css
static/js/: custom.js
tests/: __init__.py  conftest.py  test_dashboard.py  test_database.py  test_federated.py  test_integration.py  test_models.py  test_preprocessing.py
